core/compiler/tests/programs/type_err/undefined_type_constructor.loz
f (Point x y z) = x * y * z

main = f (Point 4 5 6)